--- a/main_app/templates/actor_detail.html
+++ b/main_app/templates/actor_detail.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block title %}Actor Detail{% endblock %} 
+
+{% block content %}
 <div class="detail__img">
   <img src="{{actor.img}}" alt="{{actor.name}}" />
 </div>
