--- a/main_app/templates/actor_update.html
+++ b/main_app/templates/actor_update.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %} 
+
+{% block title %}Update Actor{% endblock %} 
+
 {% block content %}
 <div class="update-page-container">
   <h1 class="title pt-5">Update {{actor.name}}</h1>
