--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -47,14 +47,14 @@
       </div>
       <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="{% url 'actor_create' %}"
-          >Create a new Actor</a
+          >Create a New Actor</a
         >
       </div>
       <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="/movies">Movies</a>
       </div>
       <div class="navbar-menu navbar-end">
-        <a class="navbar-item" href="{% url 'movie_create_general' %}">Create New Movies</a>
+        <a class="navbar-item" href="{% url 'movie_create_general' %}">Create a New Movie</a>
       </div>
       <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="{% url 'watchlist_list' %}"
