--- a/main_app/templates/actor_create.html
+++ b/main_app/templates/actor_create.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %} 
+
+{% block title %}Actor Create{% endblock %} 
+
 {% block content %}
 <h1 class="title-create-actor">Add an Actor</h1>
 
