--- a/main_app/templates/movie_create_general.html
+++ b/main_app/templates/movie_create_general.html
@@ -3,7 +3,12 @@
 {% block title %}Create Movie{% endblock %}
 
 {% block content %}
-  <h1>Create a New Movie</h1>
+  <h1 class="title-create-movie">Create a New Movie</h1>
+
+  <div class="link-go-back-new">
+    <a href="{% url 'movie_list' %}">> Go back</a>
+    </div>
+
   <form method="POST">
     {% csrf_token %}
     
@@ -50,11 +55,13 @@
               <option value="{{ actor.id }}">{{ actor.name }}</option>
           {% endfor %}
       </select>
+      <div class="actor-select-sub-text">
       <small>To select multiple actors, hold down the Command key (on Mac) or Control key (on Windows) while clicking on the actors.</small>
+        </div>
     </div>
 
     <div class="form-group">
-      <button type="submit">Create Movie</button>
+        <input type="submit" value="Create Movie" />
     </div>
   </form>
 {% endblock %}
