--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -13,7 +13,7 @@ SEO {% endcomment %}
 <div class="movie-image">
 <img src="{{movie.img}}" alt="{{movie.title}}" />
 </div>
-<h1>{{movie.title}}</h1>
+<h1 class="title-movie-display">{{movie.title}}</h1>
 <p>Release Year: {{movie.release_year}}</p>
 <p>Runtime: {{movie.runtime}} minutes</p>
 <p>Genre: {{movie.genre}}</p>
