--- a/main_app/templates/movie_update.html
+++ b/main_app/templates/movie_update.html
@@ -3,7 +3,12 @@
 {% block title %}Update Movie{% endblock %}
 
 {% block content %}
-  <h1>Update Movie</h1>
+  <h1 class="title-update-movie">Update Movie</h1>
+
+  <div class="link-go-back-new">
+    <a href="{% url 'movie_list' %}">> Go back</a>
+  </div>
+
   <form method="POST">
     {% csrf_token %}
     
@@ -50,14 +55,14 @@
               <option value="{{ actor.id }}" {% if actor in movie.actors.all %}selected{% endif %}>{{ actor.name }}</option>
           {% endfor %}
       </select>
+      <div class="actor-select-sub-text">
       <small>To select multiple actors, hold down the Command key (on Mac) or Control key (on Windows) while clicking on the actors.</small>
+    </div>
     </div>
 
     <div class="form-group">
-      <button type="submit">Update Movie</button>
+      <input type="submit" value="Update Movie" />
     </div>
   </form>
-  <div class="btn-back-movie-p">
-    <a href="{% url 'movie_list' %}">Go back</a>
-  </div>
+
 {% endblock %}
