--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -9,6 +9,8 @@ SEO {% endcomment %}
 
 <a href="{% url 'movie_create_general' %}" class="btn btn-primary">Create New Movie</a>
 
+{% comment %} <a href="{% url 'watchlist_create' %}" class="btn btn-primary">Create Watchlist</a> {% endcomment %}
+
 {% for movie in movies %}
 <div class="movie-image">
 <img src="{{movie.img}}" alt="{{movie.title}}" />
