--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -61,6 +61,11 @@
           >Watchlists</a
         >
       </div>
+      <div class="navbar-menu navbar-end">
+        <a class="navbar-item" href="{% url 'watchlist_create' %}"
+          >Create a New Watchlist</a
+        >
+      </div>
     </nav>
     <div class="container">{% block content %}{% endblock %}</div>
     <footer class="footer">
