watchlist delete route, view, template, styling done

--- a/main_app/templates/watchlist_list.html
+++ b/main_app/templates/watchlist_list.html
@@ -6,7 +6,7 @@
 <div class="watchlists-container">
     <h1 class="title">Watchlists</h1>
     <div class="links-back-movie-List-wachl">
-      <a href="{% url 'movie_list' %}">Go to Movie List</a>
+      <a href="{% url 'movie_list' %}">> Go to Movie List</a>
     </div>
     <hr />
     {% for watchlist in object_list %}
@@ -14,6 +14,12 @@
             <h2 class="watchlist-title">
                 <a href="{% url 'watchlist_detail' watchlist.pk %}">{{ watchlist.title }}</a>
             </h2>
+            
+            <a href="{% url 'watchlist_delete' watchlist.id %}" class="button is-danger">
+              <span class="icon">
+                  <i class="fas fa-trash-alt"></i>
+              </span>
+          </a>
             
         </div>
     {% empty %}
