--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -502,6 +502,8 @@ img {
 .links-back-movie-List-wachl {
   text-align: right;
   margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .links-back-movie-List-wachl a {
