--- a/main_app/templates/actor_delete_confirmation.html
+++ b/main_app/templates/actor_delete_confirmation.html
@@ -21,8 +21,7 @@
       <a
         class="button is-primary custom-cancel-button"
         href="{% url 'actor_detail' actor.pk %}"
-        >Cancel</a
-      >
+        >Cancel</a>
     </div>
   </form>
 </div>
